# JLP

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
lib/: cpu_ops.cc  gpu_ops.cc  kepler.h  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h  test.cu
src/JLP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jlp/: __init__.py  jlp.py
src/kepler_jax/: __init__.py  kepler_jax.py  kepler_jax_version.py
tests/: test_quant.py
